[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Noisy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SpriteTypes/SpriteAntiguo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Fantasma.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SpriteTypes/SpriteActual.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/GameOver.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Timer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Youtuber.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Nivel.gd" type="Script" id=8]
[ext_resource path="res://assets/Sprites/piso_actual.png" type="Texture" id=9]
[ext_resource path="res://assets/Sprites/piso_antiguo.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Hoyo.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Piano.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/MesaAntigua.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/Music/level.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/Sfx/attract.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/Sfx/repel.ogg" type="AudioStream" id=16]
[ext_resource path="res://Scenes/Collectible.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/Sfx/piano1.ogg" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 475, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 300 )

[node name="Nivel" type="Node2D"]
script = ExtResource( 8 )

[node name="GameOverLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 10

[node name="GameOver" parent="GameOverLayer" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Timer" parent="GameOverLayer" instance=ExtResource( 6 )]
position = Vector2( 414, 35 )

[node name="EntityLayer" type="CanvasLayer" parent="."]
pause_mode = 1

[node name="BordesNivel" type="StaticBody2D" parent="EntityLayer"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntityLayer/BordesNivel"]
position = Vector2( 400, -40 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EntityLayer/BordesNivel"]
position = Vector2( 400, 640 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="EntityLayer/BordesNivel"]
position = Vector2( -40, 300 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="EntityLayer/BordesNivel"]
position = Vector2( 840, 300 )
shape = SubResource( 2 )

[node name="NoisyObjects" type="Node2D" parent="EntityLayer"]
z_index = 1

[node name="Noisy" parent="EntityLayer/NoisyObjects" instance=ExtResource( 1 )]
position = Vector2( 170, 146 )

[node name="Noisy2" parent="EntityLayer/NoisyObjects" instance=ExtResource( 1 )]
position = Vector2( 169, 201 )

[node name="Noisy3" parent="EntityLayer/NoisyObjects" instance=ExtResource( 1 )]
position = Vector2( 159, 500 )

[node name="Noisy4" parent="EntityLayer/NoisyObjects" instance=ExtResource( 1 )]
position = Vector2( 106, 530 )

[node name="Noisy5" parent="EntityLayer/NoisyObjects" instance=ExtResource( 1 )]
position = Vector2( 488, 133 )

[node name="Noisy6" parent="EntityLayer/NoisyObjects" instance=ExtResource( 1 )]
position = Vector2( 502, 188 )

[node name="Youtuber" parent="EntityLayer" instance=ExtResource( 7 )]
position = Vector2( 82, 114 )
selfie_length = 100
angulo_inicial = 270

[node name="Fantasma" parent="EntityLayer" instance=ExtResource( 3 )]
position = Vector2( 92, 501 )

[node name="ObjetosAntiguos" type="Node" parent="EntityLayer"]

[node name="MesaAntigua" parent="EntityLayer/ObjetosAntiguos" instance=ExtResource( 13 )]
position = Vector2( 253, 499 )

[node name="MesaAntigua2" parent="EntityLayer/ObjetosAntiguos" instance=ExtResource( 13 )]
position = Vector2( 501, 429 )

[node name="MesaAntigua3" parent="EntityLayer/ObjetosAntiguos" instance=ExtResource( 13 )]
position = Vector2( 437, 328 )

[node name="MesaAntigua4" parent="EntityLayer/ObjetosAntiguos" instance=ExtResource( 13 )]
position = Vector2( 539, 60 )

[node name="MesaAntigua5" parent="EntityLayer/ObjetosAntiguos" instance=ExtResource( 13 )]
position = Vector2( 592, 153 )

[node name="Hoyos" type="Node" parent="EntityLayer"]

[node name="Hoyo" parent="EntityLayer/Hoyos" instance=ExtResource( 11 )]
position = Vector2( 166, 61 )

[node name="Hoyo2" parent="EntityLayer/Hoyos" instance=ExtResource( 11 )]
position = Vector2( 229, 115 )

[node name="Hoyo3" parent="EntityLayer/Hoyos" instance=ExtResource( 11 )]
position = Vector2( 177, 318 )

[node name="Hoyo4" parent="EntityLayer/Hoyos" instance=ExtResource( 11 )]
position = Vector2( 230, 245 )

[node name="Hoyo5" parent="EntityLayer/Hoyos" instance=ExtResource( 11 )]
position = Vector2( 466, 559 )

[node name="Hoyo6" parent="EntityLayer/Hoyos" instance=ExtResource( 11 )]
position = Vector2( 510, 481 )

[node name="Hoyo7" parent="EntityLayer/Hoyos" instance=ExtResource( 11 )]
position = Vector2( 458, 406 )

[node name="Hoyo8" parent="EntityLayer/Hoyos" instance=ExtResource( 11 )]
position = Vector2( 411, 350 )

[node name="InteractuablesFantasma" type="Node" parent="EntityLayer"]

[node name="Piano" parent="EntityLayer/InteractuablesFantasma" instance=ExtResource( 12 )]
position = Vector2( 197, 239 )

[node name="Piano2" parent="EntityLayer/InteractuablesFantasma" instance=ExtResource( 12 )]
position = Vector2( 635, 465 )

[node name="AttractRepelObjets" type="Node" parent="EntityLayer"]

[node name="Goal" parent="EntityLayer" instance=ExtResource( 17 )]
position = Vector2( 722, 76 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -5

[node name="Node2D" type="Node2D" parent="Background"]
scale = Vector2( 2, 2 )

[node name="SpriteActual" parent="Background/Node2D" instance=ExtResource( 4 )]
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 0, 0, 800, 600 )

[node name="SpriteAntiguo" parent="Background/Node2D" instance=ExtResource( 2 )]
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 800, 600 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -80.0
autoplay = true

[node name="RepelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -12.0

[node name="AttractSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -12.0

[node name="LevelFinishedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -6.0

[connection signal="body_entered" from="EntityLayer/Goal" to="." method="on_goal_reached"]
